# fastentregas

./: .eslintrc.js  README.md  package.json
server/: alembic.ini  app.py  pyproject.toml
server/src/: alembic.ini  config.py  resolvers.py  routes.py  server.py
server/src/database/: db.py
server/src/middlewares/: auth.py  jwt.py
server/src/migrations/: env.py
server/src/migrations/versions/: 0001_create_user.py  0002_alter_telephone_type.py  0003_alter_telephone_constraint.py  0004_create_delivery.py  0005_change_delivery_pk_constraint.py  0006_create_delivery_boy.py  0007_create_address_table.py  0008_alter_delivery_table.py  0009_create_admin_table.py  0010_create_employee_table.py  0011_alter_telephone_null_constraint.py  67101680305f_create_user.py  e87d4bb06e49_alter_telephone_type.py
server/src/models/: address.py  admin.py  delivery.py  deliveryboy.py  employee.py  user.py
server/src/modules/deliveryboy/controllers/: create_delivery_boy_controller.py  (+6 more)
server/src/schemas/: address_schema.py  admin_schema.py  delivery_boy_schema.py  delivery_schema.py  employee_schema.py  user_schema.py
server/src/utils/: authentication.py  validation.py
server/tests/: conftest.py  factories.py  test_server.py
server/tests/test_auth/: test_e2e.py
server/tests/test_delivery/: test_e2e.py  test_model.py
server/tests/test_delivery_boy/: test_e2e.py  test_model.py
server/tests/test_employee/: test_e2e.py  test_model.py  test_service.py
server/tests/test_user/: test_e2e.py  test_model.py  test_service.py  test_views.py
server/tests/test_utils/: test_unit.py
(+21 files in other folders)
